# love-n-fit

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/data/: products.json
backend/routers/: chat.py  tryon.py
backend/scripts/: index_products.py
backend/utils/: vector_store.py  vuori_scraper.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWidget.jsx  Footer.jsx  ImageUpload.jsx
