[project]
name = "ai-virtual-try-on-clothes"
version = "0.1.0"
description = ""
authors = [
    {name = "gheniabla"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "google-genai (>=1.11.0,<2.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "faiss-cpu (>=1.9.0,<2.0.0)",
    "numpy (>=1.26.0,<3.0.0)",
    "lxml (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

